<resources>
    <!-- Activity Names -->
    <string name="app_name">Water Bulletin</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">User Preferences</string>
    <string name="preference_file_key">Preference File</string>

    <!-- Current Intake -->
    <string name="saved_current_intake">saved_current_intake_key</string>
    <string name="saved_image_progress">saved_image_progress_key</string>

    <!-- Minimum Intake -->
    <string name="settings_min_intake_label">Minimum Intake</string>
    <string name="settings_min_intake_key" translatable="false">saved_min_intake_key</string>
    <string name="pref_min_intake" translatable="false">pref_min_intake_key</string>

    <!-- Maximum Intake -->
    <string name="settings_max_intake_label">Maximum Intake</string>
    <string name="settings_max_intake_key" translatable="false">saved_max_intake_key</string>

    <!-- Push Notifications -->
    <string name="settings_push_notification_label">Enable Push Notifications?</string>
    <string name="settings_push_notification_key" translatable="false">push_notification</string>
    <string name="settings_push_notification_default" translatable="false">false</string>

    <!-- Frequency of Push Notifications -->
    <string name="settings_notification_frequency_label">Frequency of Push Notifications</string>
    <string name="settings_notification_frequency_desc">How often should you get push notifications</string>
    <string name="settings_notification_frequency_key" translatable="false">frequency_key</string>
    <string name="settings_notification_frequency_default" translatable="false">1</string>


</resources>